<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <RelativeLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_40"
            android:background="@color/cream"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/notoseriftc__medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/login_msg"
                android:textColor="#3e1151"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/tv_otp_ph_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20"
                android:background="@color/white"
                android:fontFamily="@font/notoseriftc_light"
                android:gravity="center"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionDone"
                android:paddingTop="@dimen/dimen_5"
                android:paddingBottom="@dimen/dimen_5"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tv_otp_room_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginBottom="@dimen/dimen_5"
                android:background="@color/white"
                android:fontFamily="@font/notoseriftc_light"
                android:gravity="center"
                android:hint="Enter Room No"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingTop="@dimen/dimen_5"
                android:paddingBottom="@dimen/dimen_5"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_15"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chekcbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />

                <TextView

                    android:id="@+id/terms_conditions_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/notoseriftc_light"
                    android:linksClickable="true"
                    android:textColor="#000000"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginBottom="40dp"
                android:background="@color/font_color_purple"
                android:fontFamily="@font/notoseriftc__medium"
                android:padding="@dimen/dimen_5"
                android:text="@string/opt_send"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>